[package]
name = "bitcoin_hashes"
version = "0.9.1"
authors = ["Andrew Poelstra <apoelstra@wpsoftware.net>"]
edition = "2018"
license = "CC0-1.0"
description = "Hash functions used by rust-bitcoin which support rustc 1.29.0"
documentation = "https://docs.rs/bitcoin_hashes/"
keywords = [ "crypto", "bitcoin", "hash", "digest" ]
readme = "README.md"

[lib]
name = "bitcoin_hashes"
path = "src/lib.rs"

[features]
default = [ "std", "mesalock_sgx" ]
std = [ "mesalock_sgx" ]
# serde-std = ["serde/std"]
unstable = []  # for benchmarking
fuzztarget = [] # used by other rust-bitcoin projects to make hashes almost-noops, DON'T USE THIS
mesalock_sgx = [ "std", "sgx_tstd" ]

[dev-dependencies]
# serde_test = "1.0"
# serde_json = "1.0"
# jsonschema-valid = "0.4.0"

[dependencies]
sgx_tstd = { rev = "v1.1.3", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[dependencies.schemars]
version = "0.8.0"
optional = true

[dependencies.serde]
version = "1.0"
optional = true
default-features = false

# [target.wasm32-unknown-unknown.dev-dependencies]
# wasm-bindgen-test = "0.3"
